- tweak for issue on detail-panel header label overlapping with close button for smaller device. - adjust map filter media query for filter lable overlapping issue

--- a/apps/public/src/app/applications/projects.component.scss
+++ b/apps/public/src/app/applications/projects.component.scss
@@ -378,7 +378,7 @@ $select-badge-active-bg: #a5d8ff;
 }
 
 // To accommodate smaller device-width that the lable text wrapped to next line. 
-@media (max-width: 360px) {
+@media (max-width: 367px) {
   .app-results {
     height: 6.2rem;
   }
